--- a/app/src/main/res/layout/main_activity_relase.xml
+++ b/app/src/main/res/layout/main_activity_relase.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SecondMainActivity">
+    tools:context=".MainActivity">
 
     <fragment
         android:id="@+id/fragment_main"
@@ -13,5 +13,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/second_navigation" />
+        app:navGraph="@navigation/base_relase_navigation" />
 </LinearLayout>
