--- a/app/src/main/res/navigation/base_relase_navigation.xml
+++ b/app/src/main/res/navigation/base_relase_navigation.xml
@@ -9,10 +9,14 @@
         android:id="@+id/mainFragment"
         android:name="ls.yylx.lscodestore.ui.main.MainFragment"
         android:label="main_fragment"
-        tools:layout="@layout/main_fragment" />
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_first_navigation"
+            app:destination="@id/first_navigation" />
+    </fragment>
 
 
-<!--    <include app:graph="@navigation/second_navigation" />-->
+    <include app:graph="@navigation/first_navigation" />
 
 
 </navigation>
