--- a/app/src/main/res/navigation/base_navigation.xml
+++ b/app/src/main/res/navigation/base_navigation.xml
@@ -5,10 +5,14 @@
     android:id="@+id/base_navigation"
     app:startDestination="@id/mainFragment">
 
-
     <fragment
         android:id="@+id/mainFragment"
         android:name="ls.yylx.lscodestore.ui.main.MainFragment"
         android:label="main_fragment"
         tools:layout="@layout/main_fragment" />
+
+
+<!--    <include app:graph="@navigation/second_navigation" />-->
+
+
 </navigation>
