--- a/app/src/main/res/layout/main_activity_relase.xml
+++ b/app/src/main/res/layout/main_activity_relase.xml
@@ -7,8 +7,13 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+<!--    <Button-->
+<!--        android:id="@+id/btn_ok"-->
+<!--        android:text="指纹"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="64dp"/>-->
     <fragment
-        android:id="@+id/fragment_main"
+        android:id="@+id/fragment_main_relase"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
