--- a/firstmodule/src/main/res/layout/main_activity.xml
+++ b/firstmodule/src/main/res/layout/main_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".FirstMainActivity">
 
     <fragment
         android:id="@+id/fragment_main"
