--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
         <!--        <item name="md_corner_radius">8dp</item>-->
 
         <!--        <item name="android:dropDownSpinnerStyle">@style/SpinnerTheme</item>-->
+        <item name="tabStyle">@style/MyTabStyle</item>
     </style>
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
@@ -112,17 +113,19 @@
     </style>
 
 
-    <style name="TabDaoHang" parent="Widget.MaterialComponents.TabLayout">
+    <style name="MyTabStyle" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabTextColor">@color/white</item>
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
     </style>
 
-    <style name="MyTabTextAppearance" parent="TextAppearance.AppCompat.Button">
-        <item name="android:textSize">20sp</item>
+
+    <style name="MyTabTextAppearance" parent="TextAppearance.AppCompat.Widget.Button">
+        <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="textAllCaps">true</item>
     </style>
+
 
 
     <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Medium">
