去掉splitties库 替换composing build

--- a/basemodule/src/main/res/values/colors.xml
+++ b/basemodule/src/main/res/values/colors.xml
@@ -34,4 +34,9 @@
     <color name="grey_99">#999999</color>
     <color name="grey_44">#444444</color>
     <color name="grey_33">#333333</color>
+
+    <color name="red">#E40101</color>
+
+
+
 </resources>
